@@ -214,6 +214,29 @@ fi
 
 AC_SUBST(USE_SSL)
 
+dnl check for libidn
+AC_ARG_WITH(libidn, AC_HELP_STRING([--with-libidn=DIR],
+	    [Support IDN (needs GNU Libidn)]),
+	    libidn=$withval, libidn=yes)
+if test "$libidn" != "no"; then
+    if test "$libidn" != "yes"; then
+	LDFLAGS="${LDFLAGS} -L$libidn/lib"
+	CPPFLAGS="${CPPFLAGS} -I$libidn/include"
+    fi
+    AC_CHECK_HEADER(idna.h,
+		    AC_CHECK_LIB(idn, stringprep_check_version,
+				 [libidn=yes LIBS="${LIBS} -lidn"], libidn=no),
+				 libidn=no)
+    fi
+    if test "$libidn" != "no"; then
+	AC_DEFINE(LIBIDN, 1, [Define to 1 if you want IDN support.])
+    else
+	AC_MSG_WARN([Libidn not found])
+    fi
+    AC_MSG_CHECKING([if Libidn should be used])
+    AC_MSG_RESULT($libidn)
+
+
 dnl define where the configuration file is located
 AC_DEFINE_DIR(CONFIG_DIR,sysconfdir,[where the configuration file can be found])
 
